--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,9 +94,11 @@
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/mandatory_indicator"
-        app:layout_constraintTop_toBottomOf="@+id/textErrorMessage"
-        tools:layout_editor_absoluteX="190dp" />
+        android:text="@string/login_button_label"
+        app:layout_constraintStart_toEndOf="@id/barrierLabels"
+        app:layout_constraintTop_toBottomOf="@+id/textErrorMessage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
