--- a/app/src/main/res/layout/fragment_inventory_list.xml
+++ b/app/src/main/res/layout/fragment_inventory_list.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+<androidx.recyclerview.widget.RecyclerView
     android:id="@+id/list"
     android:name="nz.co.afleet.bit603_a2_johnmcpherson.InventoryFragment"
     android:layout_width="match_parent"
@@ -11,3 +17,15 @@
     app:layoutManager="LinearLayoutManager"
     tools:context=".InventoryFragment"
     tools:listitem="@layout/fragment_inventory" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@android:drawable/ic_dialog_email"
+        android:layout_marginRight="@dimen/fab_margin" />
+</RelativeLayout>
+
