--- a/app/src/main/res/layout/fragment_inventory_list.xml
+++ b/app/src/main/res/layout/fragment_inventory_list.xml
@@ -20,7 +20,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabAddInventoryItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/fab_margin"
