--- a/app/src/main/res/layout/fragment_inventory_list.xml
+++ b/app/src/main/res/layout/fragment_inventory_list.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_plus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
