--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="activity_horizontal_margin">48dp</dimen>
     <dimen name="fab_margin">48dp</dimen>
+    <dimen name="text_size_standard">22sp</dimen>
 </resources>
