--- a/app/src/main/res/layout/activity_add_inventory.xml
+++ b/app/src/main/res/layout/activity_add_inventory.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AddInventoryActivity">
+    tools:context=".ui.inventory_item.AddInventoryActivity">
 
     <Button
         android:id="@+id/buttonCancel"
